common/force-app/main/default/objects/Product_Feedback__c/Product_Feedback__c.object-meta.xml
<CustomObject>
    <label>Product Feedback</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Product Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>