common/force-app/main/default/objects/Product_Feedback__c/fields/Master_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Plan</label>
    <referenceTo>Masterplan__c</referenceTo>
    <relationshipLabel>Product Feedback</relationshipLabel>
    <relationshipName>Product_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>