common/force-app/main/default/objects/Product_Feedback__c/fields/Price_feedback__c.field-meta.xml
<CustomField>
    <fullName>Price_feedback__c</fullName>
    <label>Price feedback $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>