common/force-app/main/default/objects/Product_Feedback__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Feedbacks</relationshipLabel>
    <relationshipName>Product_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>